# python-anyconfig-fortios-backend

./: .travis.yml  MANIFEST.in  NEWS  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
anyconfig_fortios_backend/: fortios.py
pkg/: package.spec.in
src/anyconfig_fortios_backend/: __init__.py  dumper.py  fortios.py  loader.py  parser.py
src/anyconfig_fortios_backend.egg-info/: PKG-INFO
src/anyconfig_fortios_backend/fortios/: __init__.py  base.py  dumper.py  fortios.py  loader.py  parser.py
tests/: common.py  constants.py  fortios_.py  requirements.txt  test_fortios.py  test_loader.py  test_parser.py  test_plugin.py
tests/res/: comments_00.json  comments_00.txt  firewall_policy_20.json  firewall_policy_20.txt  firewall_service_category_40.json  firewall_service_category_40.txt  multiline_parameter_10.json  multiline_parameter_10.txt  system_global_10.json  system_global_10.txt  system_global_np6_40.json  system_global_np6_40.txt  system_global_with_vdom_20.json  system_global_with_vdom_20.txt  system_np6_30.json  system_np6_30.txt  vdom_10.json  vdom_10.txt  vdoms_edit_without_next_10.json  vdoms_edit_without_next_10.txt  vdoms_edit_without_next_20.json  vdoms_edit_without_next_20.txt
